// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Binning Item card render tests renders the binning item card 1`] = `
<TouchableOpacity
  onPress={[Function]}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffffff",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 4,
          "flexDirection": "column",
          "margin": 10,
        }
      }
    >
      <View
        style={
          Object {
            "marginBottom": 5,
          }
        }
      >
        <Text>
          [missing "en.PALLET.PALLET_ID" translation]: 1
        </Text>
      </View>
      <View>
        <Text>
          [missing "en.BINNING.FIRST_ITEM" translation]: itemDesc
        </Text>
      </View>
      <View
        style={
          Object {
            "marginTop": 5,
          }
        }
      >
        <Text>
          [missing "en.BINNING.LAST_LOC" translation]: A1-1
        </Text>
      </View>
    </View>
    <View>
      <TouchableOpacity
        onPress={[Function]}
        style={
          Object {
            "flex": 1,
            "margin": 10,
            "paddingBottom": 5,
            "paddingLeft": 5,
            "paddingTop": 5,
          }
        }
      >
        <View>
          <mockConstructor
            color="#545F7A"
            name="trash-can"
            size={40}
          />
        </View>
      </TouchableOpacity>
    </View>
  </View>
</TouchableOpacity>
`;

exports[`Binning Item card render tests renders the binning item card for empty pallet 1`] = `
<TouchableOpacity
  onPress={[Function]}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffffff",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 4,
          "flexDirection": "column",
          "margin": 10,
        }
      }
    >
      <View
        style={
          Object {
            "marginBottom": 5,
          }
        }
      >
        <Text>
          [missing "en.PALLET.PALLET_ID" translation]: 1
        </Text>
      </View>
      <View>
        <Text
          style={
            Object {
              "color": "#f44336",
            }
          }
        >
          [missing "en.BINNING.EMPTY_PALLET" translation]
        </Text>
      </View>
    </View>
    <View>
      <TouchableOpacity
        onPress={[Function]}
        style={
          Object {
            "flex": 1,
            "margin": 10,
            "paddingBottom": 5,
            "paddingLeft": 5,
            "paddingTop": 5,
          }
        }
      >
        <View>
          <mockConstructor
            color="#545F7A"
            name="trash-can"
            size={40}
          />
        </View>
      </TouchableOpacity>
    </View>
  </View>
</TouchableOpacity>
`;

exports[`Binning Item card render tests renders the binning item card in read only mode 1`] = `
<TouchableOpacity
  onPress={[Function]}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffffff",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 4,
          "flexDirection": "column",
          "margin": 10,
        }
      }
    >
      <View
        style={
          Object {
            "marginBottom": 5,
          }
        }
      >
        <Text>
          [missing "en.PALLET.PALLET_ID" translation]: 1
        </Text>
      </View>
      <View>
        <Text>
          [missing "en.BINNING.FIRST_ITEM" translation]: itemDesc
        </Text>
      </View>
      <View
        style={
          Object {
            "marginTop": 5,
          }
        }
      >
        <Text>
          [missing "en.BINNING.LAST_LOC" translation]: A1-1
        </Text>
      </View>
    </View>
  </View>
</TouchableOpacity>
`;

exports[`Binning Item card render tests renders the binning item card without last loc 1`] = `
<TouchableOpacity
  onPress={[Function]}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffffff",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 4,
          "flexDirection": "column",
          "margin": 10,
        }
      }
    >
      <View
        style={
          Object {
            "marginBottom": 5,
          }
        }
      >
        <Text>
          [missing "en.PALLET.PALLET_ID" translation]: 1
        </Text>
      </View>
      <View>
        <Text>
          [missing "en.BINNING.FIRST_ITEM" translation]: itemDesc
        </Text>
      </View>
    </View>
    <View>
      <TouchableOpacity
        onPress={[Function]}
        style={
          Object {
            "flex": 1,
            "margin": 10,
            "paddingBottom": 5,
            "paddingLeft": 5,
            "paddingTop": 5,
          }
        }
      >
        <View>
          <mockConstructor
            color="#545F7A"
            name="trash-can"
            size={40}
          />
        </View>
      </TouchableOpacity>
    </View>
  </View>
</TouchableOpacity>
`;
